Allow configurable domain connectors, eg "enlightenedstructure.is.theproject.is" or "enlightenedstructure.org.on.theproject.is"; minor tweaks

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ APP_SUBDOMAIN=www
 RACK_ENV=development
 SECRET_TOKEN=at-least-30-random-characters-and-no-dictionary-words
 CREATE_PAGES=true
+DOMAIN_CONNECTOR=on
+#SHORTEN_ORIGIN_DOMAIN=true
