--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-SFW_BASE_DOMAIN=lvh.me:1111
 MAX_LINKS_PER_SITE=2
 APP_SUBDOMAIN=www
 RACK_ENV=development
@@ -6,3 +5,6 @@ SECRET_TOKEN=at-least-30-random-characters-and-no-dictionary-words
 CREATE_PAGES=true
 DOMAIN_CONNECTOR=on
 #SHORTEN_ORIGIN_DOMAIN=true
+SITE_NAME=A Node Collective
+SITE_TAGLINE=
+SFW_BASE_DOMAIN=lvh.me:1111
