--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 MAX_LINKS_PER_SITE=2
-APP_SUBDOMAIN=www
+#REDIRECT_TO_WWW=true
 RACK_ENV=development
 SECRET_TOKEN=at-least-30-random-characters-and-no-dictionary-words
 CREATE_PAGES=true
