Organize sample .env file

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,19 @@
-MAX_LINKS_PER_SITE=2
-#REDIRECT_TO_WWW=true
+# Website config:
+REDIRECT_TO_WWW=false
+CREATE_PAGES=true
 RACK_ENV=development
 SECRET_TOKEN=at-least-30-random-characters-and-no-dictionary-words
-CREATE_PAGES=true
-DOMAIN_CONNECTOR=on
-#SHORTEN_ORIGIN_DOMAIN=true
+
+# Website content:
 SITE_NAME=A Node Collective
 SITE_TAGLINE=
+SITE_MESSAGE=
+
+# Crawling:
+MAX_LINKS_PER_SITE=2
+DOMAIN_CONNECTOR=on
+SHORTEN_ORIGIN_DOMAIN=false
+
+# Fedwiki:
 SFW_BASE_DOMAIN=lvh.me:1111
+
