More flexible subdomain naming; refactor

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ SITE_TAGLINE=
 SITE_MESSAGE=
 
 # Crawling:
+CURATOR=John Q. Public
 MAX_LINKS_PER_SITE=2
 DOMAIN_CONNECTOR=on
 SHORTEN_ORIGIN_DOMAIN=false
