Minor config changes etc

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,20 @@
 # Website config:
-REDIRECT_TO_WWW=false
+BASE_DOMAIN=lvh.me
 CREATE_PAGES=true
 RACK_ENV=development
 SECRET_TOKEN=at-least-30-random-characters-and-no-dictionary-words
 
 # Website content:
-SITE_NAME=A Node Collective
+SITE_NAME=A Software Zero Site
 SITE_TAGLINE=
 SITE_MESSAGE=
 
-# Crawling:
+# Forking:
 CURATOR=John Q. Public
 MAX_LINKS_PER_SITE=2
 DOMAIN_CONNECTOR=on
 SHORTEN_ORIGIN_DOMAIN=false
 
-# Fedwiki:
-SFW_BASE_DOMAIN=lvh.me:1111
-
+# Github
+GITHUB_USER=
+GITHUB_PASS=
