Airbrake for exception tracking

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ BASE_DOMAIN=lvh.me
 CREATE_PAGES=true
 RACK_ENV=development
 SECRET_TOKEN=at-least-30-random-characters-and-no-dictionary-words
+AIRBRAKE_API_KEY=your key from airbrake.io for exception tracking optional (optional)
 
 # Website content:
 SITE_NAME=A Software Zero Site
