Dynamic header font and banner fix

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ AIRBRAKE_API_KEY=your key from airbrake.io for exception tracking optional (opti
 SITE_NAME=A Software Zero Site
 SITE_TAGLINE=
 SITE_MESSAGE=
+COLLECTION_LABEL=Knowledge Node
+SKIN=
+HEADER_FONT=Doppio One
 
 # Forking:
 CURATOR=John Q. Public
