Collections are currently one page only.  Name the page after a configurable "home slug" such as 'home'.

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,10 @@ SITE_TAGLINE=
 SITE_MESSAGE=
 COLLECTION_LABEL=Knowledge Node
 SKIN=
-HEADER_FONT=Doppio One
+HEADER_FONT=Loved by the King
+
+# Collections:
+HOME_SLUG=home
 
 # Forking:
 CURATOR=John Q. Public
@@ -19,6 +22,6 @@ MAX_LINKS_PER_SITE=2
 DOMAIN_CONNECTOR=on
 SHORTEN_ORIGIN_DOMAIN=false
 
-# Github
+# Github:
 GITHUB_USER=
 GITHUB_PASS=
