Update example env file

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,36 @@
-# Website config:
-BASE_DOMAIN=lvh.me
-CREATE_PAGES=true
-RACK_ENV=development
-SECRET_TOKEN=at-least-30-random-characters-and-no-dictionary-words
-AIRBRAKE_API_KEY=your key from airbrake.io for exception tracking optional (optional)
+# Shared config:
 
-# Website content:
+AIRBRAKE_API_KEY=your key from airbrake.io for exception tracking optional (optional)
+HOME_SLUG=home
+MAX_UPDATES=111
+
+# Forking:
+
+MAX_LINKS_PER_SITE=20
+SHORTEN_ORIGIN_DOMAIN=false
+
+# Domains:
+
+BASE_DOMAIN=lvh.me
+
+# Site config:
+
 SITE_NAME=A Software Zero Site
 SITE_TAGLINE=
 SITE_MESSAGE=
-COLLECTION_LABEL=Knowledge Node
+COLLECTION_LABEL=Collection
+CREATE_PAGES=false
+DOMAIN_CONNECTOR=via
+SCRAPED_DOMAIN_CONNECTOR=via
 SKIN=
-HEADER_FONT=Loved by the King
-
-# Collections:
-HOME_SLUG=home
-
-# Forking:
-CURATOR=John Q. Public
-MAX_LINKS_PER_SITE=2
-DOMAIN_CONNECTOR=on
-SHORTEN_ORIGIN_DOMAIN=false
-
-# Github:
+HEADER_FONT=Aladin
+#HEADER_FONT=Loved by the King
+#HEADER_FONT=Montaga
+#HEADER_FONT=Nothing You Could Do
 GITHUB_USER=
 GITHUB_PASS=
+SECRET_TOKEN=at-least-30-random-characters-and-no-dictionary-words
+AUTH_USER=
+AUTH_PASS=
+DESIGN_CREDIT=
+DESIGN_CREDIT_URL=
