Make home page dynamically configurable; clean up routes

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ SITE_NAME=A Software Zero Site
 SITE_TAGLINE=
 SITE_MESSAGE=
 COLLECTION_LABEL=Collection
+ROOT_ROUTE=forked_pages#new
 CREATE_PAGES=false
 DOMAIN_CONNECTOR=via
 SCRAPED_DOMAIN_CONNECTOR=via
